chore(format): standardize code formatting and improve documentation
- Updated index.html to enhance comment clarity and formatting consistency.
- Reformatted theme.json for better readability by aligning JSON properties.
- Added copyright headers to multiple Java files to ensure compliance with licensing.
- Refactored various classes to improve code quality, including renaming methods for clarity and consistency.
- Enhanced application properties files by removing unnecessary whitespace and ensuring proper formatting.
- Introduced new test support utilities to streamline integration testing and improve maintainability.